# hhh_p

./: CHANGES_DIFF.md  COMPARISON_ANALYSIS_README.md  COMPLETED_IMPLEMENTATION.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_EVALUATION_REPORT.md  CONFIGURATION_MANAGEMENT_COMPLETE.md  CONFIG_PARAMETER_ANALYSIS.md  EVALUATION_SUMMARY.md  EXECUTIVE_SUMMARY.md  FEATURE_IMPLEMENTATION_STATUS.md  FINALIZATION_RECOMMENDATIONS.md  FINAL_CERTIFICATION.md  FINAL_SUMMARY.md  FIX_SUMMARY.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENT_CHECKLIST.md  MASTER_INDEX.md  PARAMETER_CHECKLIST.md  PETSC_FIX_README.md  PETSC_FIX_SUMMARY.md  POST_FIX_CHECKLIST.md  QUICK_COMPARISON.md  QUICK_FIX_REFERENCE.md  README.md  README_FIX.md  SEGFAULT_FIX.md  SEGFAULT_FIX_SUMMARY.md  START_HERE.md  VISUAL_GUIDE.md  VISUAL_SUMMARY.md  ZAPDOS_COMPARISON.md  ZAPDOS_COMPARISON_ANALYSIS.md  inspect_output.py  inspect_output_safe.py  test_fixes.sh
HydroPlas/: ARCHITECTURAL_COMPLIANCE.md  CHANGE_DIAGRAM.txt  CMakeLists.txt  FINAL_IMPLEMENTATION.md  FIX_COMPLETE_README.md  GIT_COMMIT_INFO.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MULTI_ELECTRODE_IMPLEMENTATION.md  MULTI_ELECTRODE_QUICK_START.md  PETSC_SOLVER_FIX.md  QUICK_FIX_REFERENCE.txt  QUICK_REFERENCE.md  README.md  README_UPDATES.md  hydroplas_out.h5  process_results.py  rebuild_fix.sh  run.sh  run_benchmarks.sh  validate_config.py
HydroPlas/config/: argon_complete.json  benchmark_1_dc.json  benchmark_2_rf.json  benchmark_3_dbd.json  complete_feature_demo.yaml  dbd_argon.json  default_config.yaml  excited_test.json  main_test.yaml  multi_electrode_dbd_dual_dielectric.json  multi_electrode_dc_dc.json  multi_electrode_dual_freq.json  multi_electrode_pulse_dc.json  multi_electrode_rf_ground.json  multi_electrode_rf_rf_phase.json  penning_mixture.json  plasma_jet_argon.json  test_petsc_fix.yaml
HydroPlas/data/: ar_elastic_mc_red.txt  ar_ionization_mc_red.txt  elec-mod-diff.txt  elecctron_moments_cust.txt
HydroPlas/docs/: CHANGELOG.md  MULTI_ELECTRODE_GUIDE.md  PETSC_SOLVER_GUIDE.md  THEORY.md  USER_GUIDE.md  VALIDATION.md
HydroPlas/src/: main.cpp
HydroPlas/src/boundary/: BoundaryManager.cpp  BoundaryManager.hpp  PlasmaBoundaryConditions.hpp
HydroPlas/src/chemistry/: BolsigInterface.cpp  BolsigInterface.hpp  Chemistry.cpp  Chemistry.hpp  LookupTable.cpp  LookupTable.hpp  ReactionHandler.cpp  ReactionHandler.hpp  Species.cpp  Species.hpp
HydroPlas/src/config/: ConfigParser.cpp  ConfigParser.hpp
HydroPlas/src/io/: OutputManager.cpp  OutputManager.hpp
HydroPlas/src/mesh/: MeshGenerator.cpp  MeshGenerator.hpp  RectilinearGrid.cpp  RectilinearGrid.hpp
HydroPlas/src/numerics/: EquationEvaluator.cpp  EquationEvaluator.hpp  FluxSchemes.hpp
HydroPlas/src/solver/: PlasmaSolver.cpp  PlasmaSolver.hpp  Solver.cpp  Solver.hpp
